--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,4 @@ jobs:
       - uses: devcontainers/ci@v0.3
         with:
           runCmd: echo "Container built successfully"
+          push: false # disable image push so imageName is not required
